20130907	Updating NetBSD/dreamcast test instructions: 5.1 -> 6.1.1.
		Updating NetBSD/pmax install instructions: 5.1.1 -> 6.1.1.
20131006	Adding a dummy Raspberry Pi machine mode.
20131109	Updating OpenBSD/landisk install instructions: 5.0 -> 5.4.
20140803	Some cleanup and minor progress of the Dreamcast PVR graphics.
		(The graphics displayed when attempting to run the original
		ROM now looks more reasonable.)
		Updating NetBSD/dreamcast test instructions: 6.1.1 -> 6.1.4.
		Updating NetBSD/pmax install instructions: 6.1.1 -> 6.1.4.
		Renaming machine mvme187 to mvme187old to avoid collision.
		Enabling ELF file support for 88K experiments.
20140805	Fixing color bug in dev_pvr.cc simpleline, which is used when
		rendering Gouraud shaded triangles.
20140810	Beginning on disassembly of ARM THUMB (16-bit) encoding.
20140815	Adding rudimentary culling of clockwise / counter-clockwise
		polygons in the PVR rendering code.
20140816	Fixing console.cc so that it doesn't complain about buffer
		overrun when pasting a lot of data.

==============  RELEASE 0.6.0.1  ==============

20150312	Making old framework config files work again (@filename).
20180203	Reviving the (dummy) Luna 88K machine mode from r5458.
20180204	Continuing on LUNA 88K stuff; some initial fake PROM putchar
		functionality for experimenting with OpenBSD/luna88k.
20180205	Some initial OpenBSD/luna88k syscnputc() output works (hack).
20180206	Adding enough of a hack to let OpenBSD/luna88k distinguish
		between LUNA 88K and 88K2, by faking FUSE_ROM string.
20180207	Adding a semi-broken framebuffer for LUNA 88K.
20180208	Making the code build with reasonably modern GNU C++ (6.4)
		and clang (3.4.1), although there are lots of warnings.
		Updating NetBSD/pmax install instructions: 6.1.4 -> 7.1.1.
20180209	Making OpenBSD/luna88k print some more things, by faking
		more things in dev_luna88k.cc.
20180214	Minor fixes for LUNA 88K.
		88K disasm shows "nop" instead of "or r0,r0,r0" now.